# obs-pipewire-audio-capture

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  linux-pipewire-audio.c  linux-pipewire.c  pipewire-audio-capture-app.c  pipewire-audio-capture.c  pipewire-audio.c  pipewire-audio.h  pipewire-input.c  pipewire-wrapper.c  pipewire-wrapper.h
.github/workflows/: main.yml
data/locale/: ar-SA.ini  de-DE.ini  en-US.ini  es-ES.ini  es_ES.ini  fr-FR.ini  id-ID.ini  pl-PL.ini  pt-BR.ini  zh-TW.ini
src/: linux-pipewire-audio.c  pipewire-audio-capture-app.c  pipewire-audio-capture-device.c  pipewire-audio-capture.c  pipewire-audio.c  pipewire-audio.h
